--- a/packages/elements/picture/dev/index.html
+++ b/packages/elements/picture/dev/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <script src="../picture.js" async type="module"></script>
-  <cwc-picture style="height: 40vw; width: 100%; margin-top: 100vh" size="cover" position="0% 20%">
+  <cwc-picture style="height: 40vw; width: 100%; margin-top: 100vh; display: block" size="cover" position="0% 20%">
     <span style="padding: 1rem; margin: 1rem; background: rgba(0,0,0, 0.75); color: rgba(256,256,256, 0.75); display: inline-block">this image was lazy loaded</span>
     <picture>
       <source media="(min-width: 1441px)" data-srcset="../demo/i_1920.jpg">
